--- a/ProblemSets/LaTeXSource/ProblemSet1/problem_set_1.tex
+++ b/ProblemSets/LaTeXSource/ProblemSet1/problem_set_1.tex
@@ -32,7 +32,7 @@
     \begin{itemize}
         \item Escreva um programa que leia a largura e a altura de um retângulo e calcule sua área.
     \end{itemize}
-    \item \textbf{Exercício 4: Concatenar Strings}
+    \item \textbf{Exercício 5: Concatenar Strings}
     \begin{itemize}
         \item Escreva um programa que declare duas variáveis do tipo string e concatene seus valores. Imprima o resultado.
     \end{itemize}
@@ -40,11 +40,11 @@
 
 \section*{Capítulo 3: Entrada e Saída}
 \begin{itemize}
-    \item \textbf{Exercício 5: Entrada de Dados}
+    \item \textbf{Exercício 6: Entrada de Dados}
     \begin{itemize}
         \item Escreva um programa que leia o nome e a idade do usuário e imprima uma mensagem dizendo "Olá, [nome]! Você tem [idade] anos."
     \end{itemize}
-    \item \textbf{Exercício 6: Cálculo do IMC}
+    \item \textbf{Exercício 7: Cálculo do IMC}
     \begin{itemize}
         \item Escreva um programa que leia o peso e a altura do usuário e calcule o Índice de Massa Corporal (IMC) usando a fórmula \( \text{IMC} = \frac{\text{peso}}{\text{altura}^2} \). Imprima o resultado.
     \end{itemize}
@@ -52,29 +52,37 @@
 
 \section*{Capítulo 4: Estrutura de Decisão}
 \begin{itemize}
-    \item \textbf{Exercício 7: Número Par ou Ímpar}
+    \item \textbf{Exercício 8: Número Par ou Ímpar}
     \begin{itemize}
         \item Escreva um programa que leia um número inteiro e imprima se ele é par ou ímpar.
     \end{itemize}
-    \item \textbf{Exercício 8: Verificação de Maioridade}
+    \item \textbf{Exercício 9: Verificação de Maioridade}
     \begin{itemize}
         \item Escreva um programa que leia a idade de uma pessoa e imprima se ela é maior de idade (18 anos ou mais) ou menor de idade.
     \end{itemize}
-    \item \textbf{Exercício 9: Maior de Três Números}
+\end{itemize}
+    
+\section*{Capítulo 4.1: Estrutura de Decisão Aninhadas}
     \begin{itemize}
-        \item Escreva um programa que leia três números inteiros e imprima o maior deles.
-    \end{itemize}
-    \item \textbf{Exercício 10: Classificação de Notas}
-    \begin{itemize}
-        \item Escreva um programa que leia a nota de um aluno e imprima a classificação de acordo com a seguinte tabela:
+        \item \textbf{Exercício 10: Maior de Três Números}
         \begin{itemize}
-            \item Nota \(\geq\) 90: A
-            \item Nota \(\geq\) 80 e $<$ 90: B
-            \item Nota \(\geq\) 70 e $<$ 80: C
-            \item Nota \(\geq\) 60 e $<$ 70: D
-            \item Nota $<$ 60: F
+            \item Escreva um programa que leia três números inteiros e imprima o maior deles.
+        \end{itemize}
+        \item \textbf{Exercício 11: Classificação de Notas}
+        \begin{itemize}
+            \item Escreva um programa que leia a nota de um aluno e imprima a classificação de acordo com a seguinte tabela:
+            \begin{itemize}
+                \item Nota \(\geq\) 90: A
+                \item Nota \(\geq\) 80 e $<$ 90: B
+                \item Nota \(\geq\) 70 e $<$ 80: C
+                \item Nota \(\geq\) 60 e $<$ 70: D
+                \item Nota $<$ 60: F
+            \end{itemize}
+        \end{itemize}
+        \item \textbf{Exercício 12: Pedra, Papel e Tesoura}
+        \begin{itemize}
+            \item Escreva um programa para o jogo pedra, papel e tesoura.
         \end{itemize}
     \end{itemize}
-\end{itemize}
 
 \end{document}
